<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/detailheader"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/backicon"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:background="@color/white"
                android:gravity="center">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/backicon" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/backicon"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvuserdetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailheader"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="2dp"
            android:visibility="visible" />

        <ProgressBar
            android:id="@+id/pbView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/black"
            android:visibility="visible" />

        <TextView
            android:id="@+id/noserverw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/downserver"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>
</FrameLayout>