<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="4dp"
    android:padding="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:gravity="center">

            <ImageView
                android:id="@+id/imgprofile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:scaleType="fitXY"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgprofile"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvsUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/username"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvsemailv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/fullname"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvemailv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvsfullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/email"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvaddressv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvsAddressv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/address"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvphonenumv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvsphonenumv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/phone"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvwebsitev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvswebsitev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/website"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvcompanyv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tvscompanyv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/company"
                        android:textColor="@color/Darkgray"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                </LinearLayout>


                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>